k8s-configs/lugx-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: lugx-frontend
  ports:
    - port: 80
      targetPort: 80
